<resources>
    <string name="app_name">EscapeLearning</string>
    <string name="i_am_a_student">I\'m a Student</string>
    <string name="i_am_a_teacher">I\'m a Teacher</string>
    <string name="i_am_a_parent">I\'m a Parent</string>
    <string name="enjoy_learning">Enjoy Learning</string>
    <string name="create_account">Create Account</string>
    <string name="i_have_an_account">I have an account</string>
    <string name="example_text">Example Text</string>
    <string name="log_in">Log in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="network_error">No Network Connection</string>
    <string name="wrong_username_or_password">Wrong Username or Password</string>
    <string name="username_taken">Username already taken</string>
    <string name="sign_up">Sign up</string>
    <string name="name">Name</string>
    <string name="school_name">School Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="Class">Class</string>
    <string name="school_code">School Code</string>

    <string name="invalid_name">Invalid Name</string>
    <string name="invalid_school_name">Invalid School Name or Code</string>
    <string name="invalid_child_code">Invalid Child Code</string>
    <string name="invalid_class">Invalid Class</string>
    <string name="invalid_username">Invalid Username</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="child_code">Child Code</string>
</resources>